--- a/#src/scss/import/_scroll.scss
+++ b/#src/scss/import/_scroll.scss
@@ -14,12 +14,13 @@
 	    width: 0px;  /* ширина scrollbar'a */
 	    background: transparent;  /* опционально */
 	}
-    -ms-overflow-style: none;  /* IE 10+ */
-    scrollbar-width: none; /* Firefox */
-     @media (max-width:$mw+px) {
-        padding: 0px 0px 1px 0px;
-        margin: 0 -8px;
-    } 
+   -ms-overflow-style: none;  /* IE 10+ */
+   scrollbar-width: none; /* Firefox */
+
+   @media (max-width:$mw+px) {
+      padding: 0px 0px 1px 0px;
+      margin: 0 -8px;
+   } 
 	&__body {
 		overflow-x: scroll;
 		overflow-y: hidden;
@@ -83,6 +84,22 @@
 		&.open{
 			opacity: 1;
 			transition: all 1.5s ease 0s;
+		}
+	}
+
+	&.mod-anchor{
+		padding: 0 !important;
+		margin: 0 !important;
+		.scroll__body{
+			padding-bottom: 3px;
+			padding-top: 16px;
+		}
+		.scroll__item{
+			padding-top: 0;
+			padding-bottom: 0;
+		}
+		.scroll__scroll{
+			padding: 0 16px;
 		}
 	}
 }
