--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -1484,15 +1484,181 @@
 		background-color: $lightViolet;
 		.text-medium{color: $violet;}
 	}
-}
 
-.flexCol3.mod-v2{
-	.cardTerms{
+	&.mod-v2{
 		align-items: flex-start;
 		justify-content: start;
 		padding: 16px;
 		img{margin-bottom: 8px;}
 		.text-medium{margin-bottom: 8px;}
+	}
+}
+
+////////////////////////// set ////////////////////////////
+
+.set{
+	display: none;
+	&.active{
+		display: block;
+	}
+	padding: 16px;
+	@media (max-width:$md_608+px) {
+	    padding: 0;
+	}
+	&__body{
+		padding: 16px;
+		box-shadow: $boxShadow;
+		border-radius: 24px;
+		@media (max-width:$md3+px) {
+		    padding: 8px;
+		    box-shadow: none;
+		    border-radius: 0px;
+		}
+	}
+	&__row{
+		display: flex;
+		@media (max-width:$md_1045+px) {
+		    flex-direction: column;
+		}
+	}
+	&__col{
+		flex: 1;
+	}
+	&__line{
+		flex: 0 0 40px;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		&:after{
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 19px;
+			width: 2px;
+			height: 100%;
+			background-color: $divider;
+			z-index: -1;
+			@media (max-width:$md_1045+px) {
+			    top: 19px;
+				left: 0px;
+				width: 100%;
+				height: 2px;
+			}
+		}
+		svg{
+			fill: $black;
+		}
+	}
+}
+
+.totalPrice{
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	padding: 16px 16px 0 16px;
+	@media (max-width:$md3+px) {
+	    flex-direction: column;
+	    > *{
+	    	width: 100%;
+	    }
+	    .mr-16, .mb-16{
+	    	margin: 0;
+	    }
+	    .label{
+	    	text-align: center;
+	    	margin-bottom: 16px;
+	    }
+	}
+	&__header{
+		display: flex;
+		align-items: center;
+		@media (max-width:$md3+px) {
+		    justify-content: space-between;
+		    margin-bottom: 16px;
+		}
+	}
+}
+
+.cardSet {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	@media (max-width:$md_1045+px) {
+		flex-direction: row;
+		align-items: flex-start;
+	}
+	&__image {
+		width: 100%;
+		padding-top: 100%;
+		position: relative;
+		@media (max-width:$md_1045+px) {
+			width: 120px;
+			padding-top: 120px;
+		}
+	}
+	&__imageWrap{
+		@extend .posa;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		img{
+			max-width: 100%;
+			max-height: 100%;
+		}
+	}
+	&__content{
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+		@media (max-width:$md_1045+px) {
+			padding: 8px;
+		}
+	}
+	&__header{
+		@media (max-width:$md_1045+px) {
+			display: flex;
+			flex-direction: row-reverse;
+			justify-content: space-between;
+		}
+		@media (max-width:$md3+px) {
+		    flex-direction: column-reverse;
+		    .f-jcsb{
+		    	justify-content: flex-start;
+		    }
+		}
+		@media (max-width:$md_608+px) {
+		    .text-medium{
+		    	font-family: "FuturaPT-Heavy";
+				font-size: 18px;
+				line-height: 24px;
+		    }
+		}
+		.f-jcsb{
+			@media (max-width:$md4+px) {
+			    flex-direction: column;
+			    .rating{
+			    	margin-bottom: 8px;
+			    }
+			}
+		}
+	}
+	&__text {
+		padding: 16px;
+		flex: 1;
+		@media (max-width:$md_1045+px) {
+			padding: 0px;
+			flex: 0;
+		}
+	}
+	&__price{
+		@extend .text-extra-small;
+		margin-left: 16px;
+		@media (max-width:$md_1045+px) {
+			margin-left: 0px;
+			margin-top: 8px;
+		}
 	}
 }
 
@@ -1542,6 +1708,10 @@
 		position: absolute;
 		top: 16px;
 		left: 16px;
+		z-index: 120;
+		+ .useful__label{
+			top: 64px;
+		}
 	}
 	&__image{
 		position: relative;
@@ -1569,6 +1739,37 @@
 	.slick-list {
 		overflow: hidden;
 		padding: 16px 32px 16px 8px;
+	}
+}
+
+//////////////////////// popular //////////////////////////
+
+.popular{
+	position: relative;
+	.useful__col{
+		flex: auto !important;
+		padding: 16px !important;
+		@media (max-width:$md3+px) {
+		    padding: 8px !important;
+		}
+	}
+	.useful__card{
+		box-shadow: 0px 0px 40px rgba(69, 76, 84, 0.08);
+	}
+	.slick-list {
+		padding: 16px 64px 16px 0px;
+		@media (max-width:$md3+px) {
+		    padding: 16px 32px 16px 8px;
+		}
+	}
+	&:after{
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 16px;
+		height: 100%;
+		background: linear-gradient(270deg, rgba(255,255,255,0),rgba(255,255,255,1));
 	}
 }
 
