--- a/#src/scss/import/base.scss
+++ b/#src/scss/import/base.scss
@@ -799,6 +799,56 @@ ul.list-ul{
 	}
 }
 
+.slider-style-banner{
+	.slick-track{
+		display: flex;
+		height: 100%;
+	}
+
+	.slick-list {
+		height: 100%;
+		overflow: hidden;
+	}
+
+	.slick-dots{
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		padding: 16px;
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		li{
+			margin: 0 4px;
+			flex: 1 1 auto;
+			height: 3px;
+			background-color: $lightGray;
+			border-radius: 99px;
+			cursor: pointer;
+			position: relative;
+			overflow: hidden;
+			&.slick-active{
+				//background-color: $red;
+				&:after{
+					content: '';
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					background-color: $red;
+					border-radius: 99px;
+					//animation: loading 3.9s linear 0s forwards;
+				}
+			}
+			button{
+				display: none;
+			}
+		}
+	}
+}
+
 //------------------ Карточки (card) -------------------//
 
 .card-v1{
