--- a/#src/scss/import/site.scss
+++ b/#src/scss/import/site.scss
@@ -195,11 +195,7 @@
 	padding-top: 100%;
 	position: relative;
 	&__body{
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
+		@extend .posa;
 		&:hover{
 			/*.slick-dots > li.slick-active:after{
 				display: none !important;
@@ -221,51 +217,8 @@
 	}
 	.slick-list {
 		border-radius: 24px;
-		overflow: hidden;
-		height: 100%;
 	}
-
-	.slick-track{
-		display: flex;
-		height: 100%;
-	}
-	.slick-dots{
-		position: absolute;
-		left: 0;
-		bottom: 0;
-		padding: 16px;
-		width: 100%;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		li{
-			margin: 0 4px;
-			flex: 1 1 auto;
-			height: 3px;
-			background-color: $lightGray;
-			border-radius: 99px;
-			cursor: pointer;
-			position: relative;
-			overflow: hidden;
-			&.slick-active{
-				//background-color: $red;
-				&:after{
-					content: '';
-					position: absolute;
-					top: 0;
-					left: 0;
-					width: 100%;
-					height: 100%;
-					background-color: $red;
-					border-radius: 99px;
-					//animation: loading 3.9s linear 0s forwards;
-				}
-			}
-			button{
-				display: none;
-			}
-		}
-	}
+	@extend .slider-style-banner;
 }
 
 @keyframes loading {
@@ -1811,7 +1764,7 @@
 		}
 	}
 	.slick-list {
-		padding: 16px 64px 16px 0px;
+		padding: 16px 0px 16px 0px;
 		@media (max-width:$md3+px) {
 		    padding: 16px 32px 16px 8px;
 		}
@@ -2138,11 +2091,171 @@
 		display: flex;
 		align-items: center;
 		margin: 20px auto 8px auto;
+		background-color: transparent;
+		color: $black;
 		svg{
 			fill: $black;
 		}
 	}
 	&__text {}
+}
+
+///////////////////////// fScreen /////////////////////////
+
+.fScreen {
+	&__row {
+		display: flex;
+		@media (max-width:$md2+px) {
+		    flex-direction: column-reverse;
+		}
+	}
+	&__col {
+		&.mod-col-1{
+			flex: 0 0 30%;
+		}
+		&.mod-col-2{
+			flex: 1;
+		}
+	}
+	&__content {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		padding: 16px;
+		@media (max-width:$md2+px) {
+		    padding: 16px 16px 64px 16px;
+		}
+	}
+	&__text{
+		max-width: 405px;
+		@media (max-width:$md2+px) {
+		    text-align: center;
+		}
+	}
+	&__sliderBody {
+		width: 100%;
+		padding-top: 61%;
+		position: relative;
+		@media (max-width:$md4+px) {
+		    padding-top: 67%;
+		}
+		@media (min-width:1600+px) {
+		    padding-top: 690px;
+		}
+	}
+	&__slider{
+		@extend .posa;
+	}
+	&__image {
+		width: 100%;
+		height: 100%;
+		img{
+			width: 100%;
+			height: 100%;
+		}
+	}
+	.slick-dots{
+		bottom: auto;
+		top: 0;
+	}
+}
+
+/////////////////////// reviewers /////////////////////////
+
+.reviewers {
+	background-color: $lightGray;
+	&__row {
+		display: flex;
+		padding: 8px;
+		position: relative;
+		@media (max-width:$md1+px) {
+		    flex-wrap: wrap;
+		}
+		@media (min-width:$md2+px) and (max-width:$md1+px) {
+		    padding-right: 549px;
+		}
+	}
+	&__col {
+		flex: 1;
+		padding: 8px;
+		@media (max-width:$md1+px) {
+		    flex: 0 0 50%;
+		}
+	}
+	&__colMax{
+		flex: 0 0 541px;
+		padding: 8px;
+		@media (min-width:$md2+px) and (max-width:$md1+px) {
+			position: absolute;
+			right: 8px;
+			bottom: 8px;
+			width: 541px;
+		}
+		@media (max-width:$md2+px) {
+		    order: -1;
+		    flex: 0 0 100%;
+		    margin-top: 48px;
+		}
+	}
+	&__content{
+		width: 100%;
+		height: 100%;
+		position: relative;
+		@media (max-width:$md2+px) {
+		    width: 541px;
+		    margin: 0 auto;
+		}
+		@media (max-width:$md_608+px) {
+		    width: 100%;
+		}
+	}
+	&__info{
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		padding: 16px 16px 16px 148px;
+		border-radius: 12px;
+		background-color: $white;
+		@media (max-width:$md2+px) {
+		    position: static;
+		}
+	}
+	&__video{
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		z-index: 5;
+		width: 134px;
+		height: 241px;
+		border-radius: 12px;
+		background-color: $white;
+		video{
+			position: absolute;
+			top: 2px;
+			left: 2px;
+			width: calc(100% - 4px);
+			height: calc(100% - 4px);
+			border-radius: 12px;
+		}
+	}
+	&__item {
+		border-radius: 12px;
+		padding: 8px;
+		background-color: $white;
+		display: flex;
+		justify-content: center;
+		svg{
+			height: 48px;
+			width: 142px;
+			@media (max-width:$md4+px) {
+			    height: 40px;
+			    width: 118px;
+			}
+		}
+	}
 }
 
 ///////////////////////// footer //////////////////////////
