--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -44,6 +44,8 @@ $blue: #3372FF;
 $lightBlue: #E4ECFF;
 $violet: #735CE6;
 $lightViolet: #EFECFF;
+$pink: #FF93C1;
+$lightPink: #FFEAF3;
 
 $divider: #EAF0F6;
 $boxShadow: 0px 0px 40px rgba(69, 76, 84, 0.08);
