--- a/#src/scss/import/base.scss
+++ b/#src/scss/import/base.scss
@@ -100,6 +100,7 @@ hr{
 .p-0{padding: 0 !important;}
 .p-0-16{padding: 0 16px;}
 .p-16-0{padding: 16px 0;}
+.p-16-8{padding: 16px 8px;}
 .p-0-8{padding: 0 8px;}
 .p-32-0{padding: 32px 0;}
 .p-32{padding: 32px;}
@@ -205,15 +206,17 @@ hr{
 	}
 }
 
-/////////////////////// COLORS ////////////////////////////
+/////////////////////// COLORS, ba ////////////////////////////
 
 .darkGray{color: $darkGray;}
-.fillDarkGray{fill: $darkGray !important;}
+.white{color: $white;}
 .green{color: $green;}
-.bg-bgeen{background-color: $green !important;}
-.white{
-	color: $white;
-}
+
+.fillDarkGray{fill: $darkGray !important;}
+
+.bg-green{background-color: $green !important;}
+.bg-red{background-color: $red !important;}
+.bg-lightGray{background-color: $lightGray !important;}
 
 ///////////////////////// FLEX ////////////////////////////
 
@@ -354,6 +357,14 @@ hr{
 	img{
 		max-width: 100%;
 		max-height: 100%;
+	}
+}
+
+.imageRad24{
+	border-radius: 24px;
+	overflow: hidden;
+	img{
+		width: 100%;
 	}
 }
 
@@ -690,6 +701,14 @@ ol.list-ol{
 			content: counter(myCounter)".";
 			color: $red;
 			@extend .text-extra-small;
+		}
+	}
+	&.mod-pl-0{
+		li{
+			padding-left: 24px;
+			&:before{
+				left: 0px;
+			}
 		}
 	}
 }
